sidebar header UI completed

--- a/src/app/sidebar-header/sidebar-header.component.html
+++ b/src/app/sidebar-header/sidebar-header.component.html
@@ -1,75 +1,79 @@
-<div class="logo-container">
-    <i class="fab fa-twitter"></i>
-</div>
+<header class="container">
+    <div>
+        <div class="logo-container">
+            <i class="fab fa-twitter"></i>
+        </div>
 
-<div class="navigation-menu-container">
-    <ul class="navigation-menu-list">
-        <li>
-            <a href="#">
-                <i class="fas fa-home"></i>
-                <span>Home</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <i class="fas fa-hashtag"></i>
-                <span>Explore</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <i class="far fa-bell"></i>
-                <span>Notifications</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <i class="far fa-envelope"></i>
-                <span>Messages</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <i class="far fa-envelope"></i>
-                <span>Bookmarks</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <i class="far fa-list-alt"></i>
-                <span>Lists</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <i class="far fa-user"></i>
-                <span>Profile</span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <i class="fas fa-ellipsis-h"></i>
-                <span>More</span>
-            </a>
-        </li>
-    </ul>
+        <div class="navigation-menu-container">
+            <nav>
+                <ul class="navigation-menu-list">
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-home"></i>
+                            <span>Home</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-hashtag"></i>
+                            <span>Explore</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="far fa-bell"></i>
+                            <span>Notifications</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="far fa-envelope"></i>
+                            <span>Messages</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="far fa-bookmark"></i>
+                            <span>Bookmarks</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="far fa-list-alt"></i>
+                            <span>Lists</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="far fa-user"></i>
+                            <span>Profile</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-ellipsis-h"></i>
+                            <span>More</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
 
-    <div class="tweet-button-container">
-        <a href="#">Profile</a>
-    </div>
-</div>
-
-<div class="user-profile-container">
-    <div class="user-avatar">
-        <img src="./../../favicon.ico" alt="">
-    </div>
-
-    <div class="user-info">
-        <p>Sabir Mahsud</p>
-        <p>@SabirMahsud</p>
+            <div class="tweet-button-container">
+                <a href="#">Tweet</a>
+            </div>
+        </div>
     </div>
 
-    <div class="more">
-        <i class="fas fa-ellipsis-h"></i>
+    <div class="user-profile-container">
+        <img class="user-avatar" src="./../../assets/user-avatar.png" alt="">
+
+        <div class="user-info">
+            <p class="display-name">Sabir Mahsud</p>
+            <p class="user-name">@SabirMahsud</p>
+        </div>
+
+        <div class="more">
+            <i class="fas fa-ellipsis-h"></i>
+        </div>
     </div>
-</div>
+</header>
