sidebar-others UI completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <sidebar-header></sidebar-header>
-<!-- <content-area></content-area>
-<sidebar-others></sidebar-others> -->
+<!-- <content-area></content-area> -->
+<sidebar-others></sidebar-others>
