--- a/src/app/sidebar-header/sidebar-header.component.scss
+++ b/src/app/sidebar-header/sidebar-header.component.scss
@@ -1,4 +1,5 @@
 .container {
+    position: fixed;
     height: 100vh;
     width: 290px;
     padding: 14px 24px 0 38px;
@@ -56,6 +57,7 @@
         display: flex;
         align-items: center;
         margin-bottom: 23px;
+        font-size: 15px;
 
         .user-avatar {
             height: 40px;
@@ -73,7 +75,6 @@
 
             .user-name {
                 color: gray;
-                font-size: 0.9em;
             }
         }
 
