--- a/src/app/sidebar-others/sidebar-others.component.html
+++ b/src/app/sidebar-others/sidebar-others.component.html
@@ -1,1 +1,117 @@
-<p>sidebar-others works!</p>
+<aside>
+    <div class="searchbar-container">
+        <i class="fas fa-search"></i>
+        <input type="text" placeholder="Search Twitter">
+    </div>
+
+    <div class="trends-for-you">
+        <div class="heading">
+            <h3>Trends for you</h3>
+            <i class="fas fa-cog"></i>
+        </div>
+        <div class="trend-item">
+            <div class="trend-info">
+                <p class="trend-location">Trending in Pakistan</p>
+                <p class="trend-hashtag">#Justice</p>
+                <p class="number-of-tweets">40.5k Tweets</p>
+            </div>
+
+            <i class="fas fa-ellipsis-h"></i>
+        </div>
+
+        <div class="trend-item">
+            <div class="trend-info">
+                <p class="trend-location">Trending in Pakistan</p>
+                <p class="trend-hashtag">#Justice</p>
+                <p class="number-of-tweets">40.5k Tweets</p>
+            </div>
+
+            <i class="fas fa-ellipsis-h"></i>
+        </div>
+
+        <div class="trend-item">
+            <div class="trend-info">
+                <p class="trend-location">Trending in Pakistan</p>
+                <p class="trend-hashtag">#Justice</p>
+                <p class="number-of-tweets">40.5k Tweets</p>
+            </div>
+
+            <i class="fas fa-ellipsis-h"></i>
+        </div>
+
+        <div class="trend-item">
+            <div class="trend-info">
+                <p class="trend-location">Trending in Pakistan</p>
+                <p class="trend-hashtag">#Justice</p>
+                <p class="number-of-tweets">40.5k Tweets</p>
+            </div>
+
+            <i class="fas fa-ellipsis-h"></i>
+        </div>
+
+        <div class="trend-item">
+            <div class="trend-info">
+                <p class="trend-location">Trending in Pakistan</p>
+                <p class="trend-hashtag">#Justice</p>
+                <p class="number-of-tweets">40.5k Tweets</p>
+            </div>
+
+            <i class="fas fa-ellipsis-h"></i>
+        </div>
+
+        <a href="#">Show More</a>
+    </div>
+
+    <div class="who-to-follow">
+        <div class="heading">
+            <h3>Who to follow</h3>
+        </div>
+        <div class="follow-list">
+            <div class="user-profile-container">
+                <img class="user-avatar" src="./../../assets/user-avatar.png" alt="">
+
+                <div class="user-info">
+                    <p class="display-name">Sabir Mahsud</p>
+                    <p class="user-name">@SabirMahsud</p>
+                </div>
+
+                <a href="#">Follow</a>
+            </div>
+
+            <div class="user-profile-container">
+                <img class="user-avatar" src="./../../assets/user-avatar.png" alt="">
+
+                <div class="user-info">
+                    <p class="display-name">Sabir Mahsud</p>
+                    <p class="user-name">@SabirMahsud</p>
+                </div>
+
+                <a href="#">Follow</a>
+            </div>
+
+            <div class="user-profile-container">
+                <img class="user-avatar" src="./../../assets/user-avatar.png" alt="">
+
+                <div class="user-info">
+                    <p class="display-name">Sabir Mahsud</p>
+                    <p class="user-name">@SabirMahsud</p>
+                </div>
+
+                <a href="#">Follow</a>
+            </div>
+        </div>
+
+        <a href="#">Show More</a>
+    </div>
+
+    <footer>
+        <div class="footer-links">
+            <a href="#">Terms of Service</a>
+            <a href="#">Privary Policy</a>
+            <a href="#">Cookie Policy</a>
+            <a href="#">Ads info</a>
+            <a href="#">More...</a>
+            <a href="#">&copy; 2021 Twitter, Inc.</a>
+        </div>
+    </footer>
+</aside>
