content-area UI completed

--- a/src/app/content-area/content-area.component.html
+++ b/src/app/content-area/content-area.component.html
@@ -1,1 +1,305 @@
-<p>content-area works!</p>
+<div class="container">
+    <div class="header">
+        <h3>Latest Tweets</h3>
+        <i class="far fa-star"></i>
+    </div>
+
+    <div class="create-tweet-area">
+        <img src="./../../assets/user-avatar.png" alt="" class="avatar">
+        <div class="typing-area">
+            <textarea name="" id="" placeholder="What's happening?"></textarea>
+            <div class="tweet-additions">
+                <div class="other-buttons">
+                    <a href="#">
+                        <i class="fas fa-image"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fas fa-stream"></i>
+                    </a>
+                    <a href="#">
+                        <i class="far fa-smile"></i>
+                    </a>
+                    <a href="#">
+                        <i class="far fa-calendar-check"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fas fa-stream"></i>
+                    </a>
+                </div>
+                <a href="#" class="tweet-button">
+                    Tweet
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="tweet-item">
+        <img src="./../../assets/user-avatar.png" alt="">
+        <div class="tweet-data">
+            <div class="tweet-header">
+                <div class="tweet-user-info">
+                    <div class="display-name">Imran Khan</div>
+                    <div class="user-name">@ImranKhanPTI</div>
+                    <span>.</span>
+                    <div class="tweet-date-time">Nov 21</div>
+                </div>
+
+                <i class="fas fa-ellipsis-h"></i>
+            </div>
+            <div class="tweet-content">
+                <p>The most shocking facts to come out are: 1. The huge total value of all encroached state & 3 major
+                    cities land - approx Rs 5595 bn; 2. The approx value of encroached forest land - Rs 1869 bn. This
+                    has aggravated Pak's existing lack of sufficient forest cover.</p>
+            </div>
+            <div class="tweet-reactions">
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="far fa-comment"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="fas fa-recycle"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="far fa-heart"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="fas fa-upload"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="tweet-item">
+        <img src="./../../assets/user-avatar.png" alt="">
+        <div class="tweet-data">
+            <div class="tweet-header">
+                <div class="tweet-user-info">
+                    <div class="display-name">Imran Khan</div>
+                    <div class="user-name">@ImranKhanPTI</div>
+                    <span>.</span>
+                    <div class="tweet-date-time">Nov 21</div>
+                </div>
+
+                <i class="fas fa-ellipsis-h"></i>
+            </div>
+            <div class="tweet-content">
+                <img src="./../../assets/user-avatar.png" alt="">
+            </div>
+            <div class="tweet-reactions">
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="far fa-comment"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="fas fa-recycle"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="far fa-heart"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="fas fa-upload"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="tweet-item">
+        <img src="./../../assets/user-avatar.png" alt="">
+        <div class="tweet-data">
+            <div class="tweet-header">
+                <div class="tweet-user-info">
+                    <div class="display-name">Imran Khan</div>
+                    <div class="user-name">@ImranKhanPTI</div>
+                    <span>.</span>
+                    <div class="tweet-date-time">Nov 21</div>
+                </div>
+
+                <i class="fas fa-ellipsis-h"></i>
+            </div>
+            <div class="tweet-content">
+                <p>The most shocking facts to come out are: 1. The huge total value of all encroached state & 3 major
+                    cities land - approx Rs 5595 bn; 2. The approx value of encroached forest land - Rs 1869 bn. This
+                    has aggravated Pak's existing lack of sufficient forest cover.</p>
+            </div>
+            <div class="tweet-reactions">
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="far fa-comment"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="fas fa-recycle"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="far fa-heart"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="fas fa-upload"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="tweet-item">
+        <img src="./../../assets/user-avatar.png" alt="">
+        <div class="tweet-data">
+            <div class="tweet-header">
+                <div class="tweet-user-info">
+                    <div class="display-name">Imran Khan</div>
+                    <div class="user-name">@ImranKhanPTI</div>
+                    <span>.</span>
+                    <div class="tweet-date-time">Nov 21</div>
+                </div>
+
+                <i class="fas fa-ellipsis-h"></i>
+            </div>
+            <div class="tweet-content">
+                <img src="./../../assets/user-avatar.png" alt="">
+            </div>
+            <div class="tweet-reactions">
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="far fa-comment"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="fas fa-recycle"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="far fa-heart"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="fas fa-upload"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="tweet-item">
+        <img src="./../../assets/user-avatar.png" alt="">
+        <div class="tweet-data">
+            <div class="tweet-header">
+                <div class="tweet-user-info">
+                    <div class="display-name">Imran Khan</div>
+                    <div class="user-name">@ImranKhanPTI</div>
+                    <span>.</span>
+                    <div class="tweet-date-time">Nov 21</div>
+                </div>
+
+                <i class="fas fa-ellipsis-h"></i>
+            </div>
+            <div class="tweet-content">
+                <p>The most shocking facts to come out are: 1. The huge total value of all encroached state & 3 major
+                    cities land - approx Rs 5595 bn; 2. The approx value of encroached forest land - Rs 1869 bn. This
+                    has aggravated Pak's existing lack of sufficient forest cover.</p>
+            </div>
+            <div class="tweet-reactions">
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="far fa-comment"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="fas fa-recycle"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="far fa-heart"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="fas fa-upload"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="tweet-item">
+        <img src="./../../assets/user-avatar.png" alt="">
+        <div class="tweet-data">
+            <div class="tweet-header">
+                <div class="tweet-user-info">
+                    <div class="display-name">Imran Khan</div>
+                    <div class="user-name">@ImranKhanPTI</div>
+                    <span>.</span>
+                    <div class="tweet-date-time">Nov 21</div>
+                </div>
+
+                <i class="fas fa-ellipsis-h"></i>
+            </div>
+            <div class="tweet-content">
+                <img src="./../../assets/user-avatar.png" alt="">
+            </div>
+            <div class="tweet-reactions">
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="far fa-comment"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="fas fa-recycle"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="far fa-heart"></i>
+                        <span>175</span>
+                    </a>
+                </div>
+                <div class="reaction-item">
+                    <a href="#">
+                        <i class="fas fa-upload"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
