--- a/src/app/content-area/content-area.component.html
+++ b/src/app/content-area/content-area.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="create-tweet-area">
-        <img src="./../../assets/user-avatar.png" alt="" class="avatar">
+        <img src="./../../assets/bannon-morrissy-RxiAV5LC-ww-unsplash.jpg" alt="" class="avatar">
         <div class="typing-area">
             <textarea name="" id="" placeholder="What's happening?"></textarea>
             <div class="tweet-additions">
@@ -34,22 +34,23 @@
     </div>
 
     <div class="tweet-item">
-        <img src="./../../assets/user-avatar.png" alt="">
+        <img src="./../../assets/jeffrey-keenan-pUhxoSapPFA-unsplash.jpg" alt="">
         <div class="tweet-data">
             <div class="tweet-header">
                 <div class="tweet-user-info">
-                    <div class="display-name">Imran Khan</div>
-                    <div class="user-name">@ImranKhanPTI</div>
+                    <div class="display-name">Don John</div>
+                    <div class="user-name">@DonJohn</div>
                     <span>.</span>
-                    <div class="tweet-date-time">Nov 21</div>
+                    <div class="tweet-date-time">Nov 29</div>
                 </div>
 
                 <i class="fas fa-ellipsis-h"></i>
             </div>
             <div class="tweet-content">
-                <p>The most shocking facts to come out are: 1. The huge total value of all encroached state & 3 major
-                    cities land - approx Rs 5595 bn; 2. The approx value of encroached forest land - Rs 1869 bn. This
-                    has aggravated Pak's existing lack of sufficient forest cover.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae qui officiis, distinctio earum at
+                    voluptates sequi quae recusandae voluptate id laudantium, nostrum enim, architecto consectetur
+                    aspernatur nesciunt. Aliquam quo ipsum autem atque assumenda architecto odit provident fugit dolore!
+                    A, eveniet.</p>
             </div>
             <div class="tweet-reactions">
                 <div class="reaction-item">
@@ -80,200 +81,21 @@
     </div>
 
     <div class="tweet-item">
-        <img src="./../../assets/user-avatar.png" alt="">
+        <img src="./../../assets/jeffrey-keenan-pUhxoSapPFA-unsplash.jpg" alt="">
         <div class="tweet-data">
             <div class="tweet-header">
                 <div class="tweet-user-info">
-                    <div class="display-name">Imran Khan</div>
-                    <div class="user-name">@ImranKhanPTI</div>
+                    <div class="display-name">Don John</div>
+                    <div class="user-name">@DonJohn</div>
                     <span>.</span>
-                    <div class="tweet-date-time">Nov 21</div>
+                    <div class="tweet-date-time">Nov 29</div>
                 </div>
 
                 <i class="fas fa-ellipsis-h"></i>
             </div>
             <div class="tweet-content">
-                <img src="./../../assets/user-avatar.png" alt="">
-            </div>
-            <div class="tweet-reactions">
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="far fa-comment"></i>
-                        <span>175</span>
-                    </a>
-                </div>
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="fas fa-recycle"></i>
-                        <span>175</span>
-                    </a>
-                </div>
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="far fa-heart"></i>
-                        <span>175</span>
-                    </a>
-                </div>
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="fas fa-upload"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="tweet-item">
-        <img src="./../../assets/user-avatar.png" alt="">
-        <div class="tweet-data">
-            <div class="tweet-header">
-                <div class="tweet-user-info">
-                    <div class="display-name">Imran Khan</div>
-                    <div class="user-name">@ImranKhanPTI</div>
-                    <span>.</span>
-                    <div class="tweet-date-time">Nov 21</div>
-                </div>
-
-                <i class="fas fa-ellipsis-h"></i>
-            </div>
-            <div class="tweet-content">
-                <p>The most shocking facts to come out are: 1. The huge total value of all encroached state & 3 major
-                    cities land - approx Rs 5595 bn; 2. The approx value of encroached forest land - Rs 1869 bn. This
-                    has aggravated Pak's existing lack of sufficient forest cover.</p>
-            </div>
-            <div class="tweet-reactions">
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="far fa-comment"></i>
-                        <span>175</span>
-                    </a>
-                </div>
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="fas fa-recycle"></i>
-                        <span>175</span>
-                    </a>
-                </div>
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="far fa-heart"></i>
-                        <span>175</span>
-                    </a>
-                </div>
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="fas fa-upload"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="tweet-item">
-        <img src="./../../assets/user-avatar.png" alt="">
-        <div class="tweet-data">
-            <div class="tweet-header">
-                <div class="tweet-user-info">
-                    <div class="display-name">Imran Khan</div>
-                    <div class="user-name">@ImranKhanPTI</div>
-                    <span>.</span>
-                    <div class="tweet-date-time">Nov 21</div>
-                </div>
-
-                <i class="fas fa-ellipsis-h"></i>
-            </div>
-            <div class="tweet-content">
-                <img src="./../../assets/user-avatar.png" alt="">
-            </div>
-            <div class="tweet-reactions">
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="far fa-comment"></i>
-                        <span>175</span>
-                    </a>
-                </div>
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="fas fa-recycle"></i>
-                        <span>175</span>
-                    </a>
-                </div>
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="far fa-heart"></i>
-                        <span>175</span>
-                    </a>
-                </div>
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="fas fa-upload"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="tweet-item">
-        <img src="./../../assets/user-avatar.png" alt="">
-        <div class="tweet-data">
-            <div class="tweet-header">
-                <div class="tweet-user-info">
-                    <div class="display-name">Imran Khan</div>
-                    <div class="user-name">@ImranKhanPTI</div>
-                    <span>.</span>
-                    <div class="tweet-date-time">Nov 21</div>
-                </div>
-
-                <i class="fas fa-ellipsis-h"></i>
-            </div>
-            <div class="tweet-content">
-                <p>The most shocking facts to come out are: 1. The huge total value of all encroached state & 3 major
-                    cities land - approx Rs 5595 bn; 2. The approx value of encroached forest land - Rs 1869 bn. This
-                    has aggravated Pak's existing lack of sufficient forest cover.</p>
-            </div>
-            <div class="tweet-reactions">
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="far fa-comment"></i>
-                        <span>175</span>
-                    </a>
-                </div>
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="fas fa-recycle"></i>
-                        <span>175</span>
-                    </a>
-                </div>
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="far fa-heart"></i>
-                        <span>175</span>
-                    </a>
-                </div>
-                <div class="reaction-item">
-                    <a href="#">
-                        <i class="fas fa-upload"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="tweet-item">
-        <img src="./../../assets/user-avatar.png" alt="">
-        <div class="tweet-data">
-            <div class="tweet-header">
-                <div class="tweet-user-info">
-                    <div class="display-name">Imran Khan</div>
-                    <div class="user-name">@ImranKhanPTI</div>
-                    <span>.</span>
-                    <div class="tweet-date-time">Nov 21</div>
-                </div>
-
-                <i class="fas fa-ellipsis-h"></i>
-            </div>
-            <div class="tweet-content">
-                <img src="./../../assets/user-avatar.png" alt="">
+                <p>Nature is truly beautiful!</p>
+                <img src="./../../assets/boxed-water-is-better-jbcY_yvsDzk-unsplash.jpg" alt="">
             </div>
             <div class="tweet-reactions">
                 <div class="reaction-item">
