--- a/src/app/sidebar-header/sidebar-header.component.html
+++ b/src/app/sidebar-header/sidebar-header.component.html
@@ -65,11 +65,11 @@
     </div>
 
     <div class="user-profile-container">
-        <img class="user-avatar" src="./../../assets/user-avatar.png" alt="">
+        <img class="user-avatar" src="./../../assets/bannon-morrissy-RxiAV5LC-ww-unsplash.jpg" alt="">
 
         <div class="user-info">
-            <p class="display-name">Sabir Mahsud</p>
-            <p class="user-name">@SabirMahsud</p>
+            <p class="display-name">UserXYZ</p>
+            <p class="user-name">@UserXYZ</p>
         </div>
 
         <div class="more">
