--- a/src/app/sidebar-others/sidebar-others.component.html
+++ b/src/app/sidebar-others/sidebar-others.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="trend-item">
             <div class="trend-info">
-                <p class="trend-location">Trending in Pakistan</p>
+                <p class="trend-location">Trending in Country</p>
                 <p class="trend-hashtag">#Justice</p>
                 <p class="number-of-tweets">40.5k Tweets</p>
             </div>
@@ -21,8 +21,8 @@
 
         <div class="trend-item">
             <div class="trend-info">
-                <p class="trend-location">Trending in Pakistan</p>
-                <p class="trend-hashtag">#Justice</p>
+                <p class="trend-location">Trending in Country</p>
+                <p class="trend-hashtag">#Equality</p>
                 <p class="number-of-tweets">40.5k Tweets</p>
             </div>
 
@@ -31,8 +31,8 @@
 
         <div class="trend-item">
             <div class="trend-info">
-                <p class="trend-location">Trending in Pakistan</p>
-                <p class="trend-hashtag">#Justice</p>
+                <p class="trend-location">Trending in Country</p>
+                <p class="trend-hashtag">#Hard_work</p>
                 <p class="number-of-tweets">40.5k Tweets</p>
             </div>
 
@@ -41,8 +41,8 @@
 
         <div class="trend-item">
             <div class="trend-info">
-                <p class="trend-location">Trending in Pakistan</p>
-                <p class="trend-hashtag">#Justice</p>
+                <p class="trend-location">Trending in Country</p>
+                <p class="trend-hashtag">#Technology</p>
                 <p class="number-of-tweets">40.5k Tweets</p>
             </div>
 
@@ -51,8 +51,8 @@
 
         <div class="trend-item">
             <div class="trend-info">
-                <p class="trend-location">Trending in Pakistan</p>
-                <p class="trend-hashtag">#Justice</p>
+                <p class="trend-location">Trending in Country</p>
+                <p class="trend-hashtag">#Global_warming</p>
                 <p class="number-of-tweets">40.5k Tweets</p>
             </div>
 
@@ -68,11 +68,22 @@
         </div>
         <div class="follow-list">
             <div class="user-profile-container">
-                <img class="user-avatar" src="./../../assets/user-avatar.png" alt="">
+                <img class="user-avatar" src="./../../assets/bannon-morrissy-RxiAV5LC-ww-unsplash.jpg" alt="">
 
                 <div class="user-info">
-                    <p class="display-name">Sabir Mahsud</p>
-                    <p class="user-name">@SabirMahsud</p>
+                    <p class="display-name">William</p>
+                    <p class="user-name">@William</p>
+                </div>
+
+                <a href="#">Follow</a>
+            </div>
+
+            <div class="user-profile-container">
+                <img class="user-avatar" src="./../../assets/jeffrey-keenan-pUhxoSapPFA-unsplash.jpg" alt="">
+
+                <div class="user-info">
+                    <p class="display-name">James Anderson</p>
+                    <p class="user-name">@JamesAnderson</p>
                 </div>
 
                 <a href="#">Follow</a>
@@ -82,19 +93,8 @@
                 <img class="user-avatar" src="./../../assets/user-avatar.png" alt="">
 
                 <div class="user-info">
-                    <p class="display-name">Sabir Mahsud</p>
-                    <p class="user-name">@SabirMahsud</p>
-                </div>
-
-                <a href="#">Follow</a>
-            </div>
-
-            <div class="user-profile-container">
-                <img class="user-avatar" src="./../../assets/user-avatar.png" alt="">
-
-                <div class="user-info">
-                    <p class="display-name">Sabir Mahsud</p>
-                    <p class="user-name">@SabirMahsud</p>
+                    <p class="display-name">Lost Mind</p>
+                    <p class="user-name">@LostMind</p>
                 </div>
 
                 <a href="#">Follow</a>
