--- a/src/app/content-area/content-area.component.scss
+++ b/src/app/content-area/content-area.component.scss
@@ -1,7 +1,7 @@
 @mixin profile-avatar {
     height: 50px;
-    width: 50px;
-    border-radius: 50px;
+    width: 55px;
+    border-radius: 50%;
 }
 
 .container {
@@ -26,6 +26,7 @@
 
         img {
             @include profile-avatar;
+            object-fit: cover;
         }
 
         .typing-area {
@@ -69,6 +70,7 @@
 
         img {
             @include profile-avatar;
+            object-fit: cover;
         }
 
         .tweet-data {
@@ -108,6 +110,7 @@
                     height: 400px;
                     border-radius: 20px;
                     margin-top: 10px;
+                    object-fit: cover;
                 }
             }
 
