--- a/src/app/sidebar-header/sidebar-header.component.scss
+++ b/src/app/sidebar-header/sidebar-header.component.scss
@@ -63,6 +63,7 @@
             height: 40px;
             width: 40px;
             border-radius: 50px;
+            object-fit: cover;
         }
 
         .user-info {
