--- a/src/app/sidebar-others/sidebar-others.component.scss
+++ b/src/app/sidebar-others/sidebar-others.component.scss
@@ -83,6 +83,7 @@ aside {
                     height: 45px;
                     width: 45px;
                     border-radius: 50px;
+                    object-fit: cover;
                 }
 
                 .user-info {
